# CliqueProblemeGraph

./: .gitignore  A_faire  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.6e9e245  Makefile  benchmark_results.csv  benchmark_results_10minutes.csv  cliqueSolver  clique_solver.cpp  clique_solver.hpp  cmake_install.cmake  exemple  graph.cpp  graph.hpp  graphDefs.hpp  graphIO.hpp  hill_climber.cpp  hill_climber.hpp  hill_climbing_algorithms.md  implementation.md  intruction.md  main.cpp  path.hpp  select.cpp  select.hpp  startBench.sh  utils.cpp  utils.hpp  weightedgraphDefs.cpp  weightedgraphDefs.hpp
graphs/: adjmat.cpp  adjmat.hpp  graphAdjMatrix.cpp  graphAdjMatrix.hpp  graphHeavy.cpp  graphHeavy.hpp  graphListAdj.cpp  graphListAdj.hpp
